# x-net-django-email-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  MANIFEST.in  README.md  gulpfile.js  package.json  project.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-lint.yml
x_net_django_email_template/locale/x_net_django_email_template/locale/LC_MESSAGES/: django.mo  django.po
x_net_django_email_template/static/css/email/: html-email.min.css  html-email.min.css.map
x_net_django_email_template/static_src/scss/email/: .stylelintrc.json  _container.scss  _media-query.scss  _normalize.scss  _typography.scss  _utils.scss  _variables.scss  html-email.scss
x_net_django_email_template/static_src/scss/email/components/: _button.scss  _image.scss
x_net_django_email_template/static_src/scss/email/sections/: _footer.scss  _header.scss  _main.scss
x_net_django_email_template/templates/email/: base.html  default.html
x_net_django_email_template/templatetags/: html_email.py
