[metadata]
name = x-net-django-email-template
description = An Email HTML template for Django
license = MIT
url = https://github.com/x-net-services/x-net-django-email-template
author = X-Net Services GmbH
author_email = support-software@x-net.at

[flake8]
ignore = D100,D101,D104,E501

[check-manifest]
ignore-bad-ideas = *.mo

[bdist_wheel]
universal = 0
